style: fix gradient on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ footer:before {
   top: -8rem;
   height: 8rem;
   width: 100%;
-  background: linear-gradient(transparent, white);
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
 footer .social,
